--- a/index.html
+++ b/index.html
@@ -70,7 +70,19 @@
       </div>
     </header>
     <section></section>
-    <footer></footer>
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4">
+          <h5>About</h5>
+        </div>
+        <div class="col-sm-4">
+          <h5>Download</h5>
+        </div>
+        <div class="col-sm-4">
+          <h5>Social</h5>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/16cb06a64c.js"
