--- a/index.html
+++ b/index.html
@@ -74,12 +74,61 @@
       <div class="row">
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">About</h5>
+          <p class="inline-block">
+            Full Stack Web Developer. Skilled in everything from HTMLto Heroku.
+            The capacity for structural and design thinking.
+          </p>
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Download</h5>
+          <p class="inline-block">
+            Need a printable version of my CV? Download it here.
+            <a href="#" target="_blank" class="cv-pdf">
+              <i class="fa-sharp fa-solid fa-download" aria-hidden="true"></i>
+              <span class="sr-only">Download</span>
+            </a>
+          </p>
         </div>
         <div class="col-sm-4">
           <h5 class="uppercase general-sub">Social</h5>
+          <ul class="list-inline-item social-link">
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <i class="fa-brands fa-square-facebook" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <i class="fa-brands fa-square-twitter" aria-hidden="true"></i>
+                <span class="sr-only">Twitter</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">LinkedIn</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <i class="fa-brands fa-square-pinterest" aria-hidden="true"></i>
+                <span class="sr-only">Pinterest</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <i class="fa-brands fa-square-instagram" aria-hidden="true"></i>
+                <span class="sr-only">Instagram</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" target="_blank">
+                <i class="fa-brands fa-square-youtube" aria-hidden="true"></i>
+                <span class="sr-only">YouTube</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
