--- a/index.html
+++ b/index.html
@@ -77,8 +77,40 @@
               <h3 class="section-heading uppercase">Personal Info</h3>
             </div>
           </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Name:</p>
+            </div>
+            <div class="value">
+              <p class="uppercase">Rosie Odenkirk</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Address:</p>
+            </div>
+            <div class="value">
+              <p class="uppercase">17 Riverdale, Catskills, NY USA</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Phone Number:</p>
+            </div>
+            <div class="value">
+              <p class="uppercase">555 204 1973</p>
+            </div>
+          </div>
+          <div class="personal-info-item">
+            <div class="key">
+              <p class="uppercase">Email:</p>
+            </div>
+            <div class="value">
+              <p class="uppercase">rosie.odenkirk@hansaw.com</p>
+            </div>
+          </div>
         </div>
-        <div class="col-ms-8 bg-color-three-reasons section-column">
+        <div class="col-ms-8 bg-color-three-reasons">
           <div class="row">
             <div class="col">
               <h3 class="section-heading uppercase">About Me</h3>
