--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </header>
     <section class="container-fluid">
-      <div class="row">
+      <div class="row section-container-row">
         <div class="col-md-4 bg-color-personal-info section-column">
           <div class="row">
             <div class="col-12">
@@ -95,7 +95,7 @@
           </div>
           <div class="personal-info-item">
             <div class="key">
-              <p class="uppercase">Phone Number:</p>
+              <p class="uppercase">Phone:</p>
             </div>
             <div class="value">
               <p class="uppercase">555 204 1973</p>
@@ -110,7 +110,7 @@
             </div>
           </div>
         </div>
-        <div class="col-ms-8 bg-color-three-reasons">
+        <div class="col-ms-8 bg-color-three-reasons section-column">
           <div class="row">
             <div class="col">
               <h3 class="section-heading uppercase">About Me</h3>
