--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,6 @@
                         <h3 class="section-heading uppercase">Work History</h3>
                     </div>
                 </div>
-
             </div>
             <div class="col-ms-8 bg-color-three-reasons section-column">
                 <div class="row">
@@ -95,9 +94,7 @@
                                 </i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">
-                                    Back End
-                                </h4>
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
                                     I follow form as well as function. I know that the
                                     aesthetics of effective design combined with application
@@ -105,6 +102,17 @@
                                     user experience.
                                 </p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 90%">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
                         </div>
                     </div>
                 </div>
