--- a/contact.html
+++ b/contact.html
@@ -81,8 +81,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Font End</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse
-                                    life and technical experience that I bring to every project.
+                                    I specialize in data-driven web applications. Many of my project
+                                    utilize document-based data. I use Python and Django in conjunction
+                                    with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
@@ -105,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -113,6 +114,34 @@
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 80%">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 70%">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 80%">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Python</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 80%">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / noSQL</span>
                         </div>
                     </div>
                 </div>
