--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
-                <ul class="list-inline-item social-link">
+                <ul class="list-inline-item social-links">
                     <li class="list-inline-item">
                         <a href="#" target="_blank">
                             <i class="fa-brands fa-square-facebook" aria-hidden="true"></i>
