--- a/contact.html
+++ b/contact.html
@@ -57,12 +57,22 @@
         </div>
     </header>
     <section class="container-fluid">
-<div class="row bg-color-contact">
-    <div class="col">
-        <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
-        <h5 class="uppercase text-center">Let's work together!</h5>
-    </div>
-</div>
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+                <h5 class="uppercase text-center">Let's work together!</h5>
+                <div class="center-form">
+                    <form action="">
+                        <input type="text" name="name" id="fulname" class="form-control" placeholder="Name" required>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
+                            required>
+                        <textarea row="5" name="projectsummary" id="projectsummary" class="form-control"
+                            placeholder="Project description" required></textarea>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
