--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,9 @@
                             required>
                         <textarea row="5" name="projectsummary" id="projectsummary" class="form-control"
                             placeholder="Project description" required></textarea>
-                        <input type="submit" value="Submit">
+                        <div class="form-row text-center">
+                            <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                        </div>
                     </form>
                 </div>
             </div>
