--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,10 @@
                         <textarea row="5" name="projectsummary" id="projectsummary" class="form-control"
                             placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
-                            <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                          
                         </div>
                     </form>
                 </div>
