--- a/contact.html
+++ b/contact.html
@@ -27,25 +27,25 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom">
+                                <a href="index.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-sharp fa-regular fa-house"></i>
                                     <span>Home</span>
                                 </a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom">
+                                <a href="resume.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-graduation-cap"></i>
                                     <span>Resume</span>
                                 </a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom">
+                                <a href="contact.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-messages"></i>
                                     <span>Contact</span>
                                 </a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom">
+                                <a href="assets/cv/sample-cv.pdf" class="hvr-sweep-to-bottom">
                                     <i class="fa-sharp fa-solid fa-download"></i>
                                     <span>Download</span>
                                 </a>
@@ -72,7 +72,7 @@
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary">Send Project Request</button>
                             </div>
-                          
+
                         </div>
                     </form>
                 </div>
