--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                                 </a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/sample-cv.pdf" class="hvr-sweep-to-bottom">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom">
                                     <i class="fa-sharp fa-solid fa-download"></i>
                                     <span>Download</span>
                                 </a>
@@ -92,7 +92,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa-sharp fa-solid fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download</span>
                     </a>
